--- a/src/pages/css/login.css
+++ b/src/pages/css/login.css
@@ -1,6 +1,9 @@
-.container{
+.container-login{
+    background-image: url("/src/pages/img/fondoLogin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
     width: 100vw;
-    height: 100;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
